--- a/01_Importance_of_LLM_and_CNN/_css/main.css
+++ b/01_Importance_of_LLM_and_CNN/_css/main.css
@@ -91,11 +91,11 @@ h1 {
   padding: 15mm;
 }
 h2 {
-  font-size: 20Q;
+  font-size: 24Q;
   line-height: 28Q;
   text-align: left;
-  margin-right: 4mm;
-  margin-left: 20mm;
+  margin-right: 0mm;
+  margin-left: 15mm;
 }
 h2::before {
   content: counter(header2, decimal-leading-zero);
@@ -103,22 +103,26 @@ h2::before {
   position: absolute;
   font-size: 32Q;
   top: 0;
-  left: 4mm;
+  left: 0mm;
   background: #cdf2fd;
   color: #3da8c9;
 }
 .secheader {
   break-before: page;
-  height: 38mm;
-  width: 114mm;
+  /* height: 58mm;
+  width: 114mm; */
   position: relative;
-  margin-top: -5mm;
+  margin-top: 2mm;
+  margin-bottom: 2mm;
 }
 .secheader p {
-  font-size: 10Q;
-  line-height: 15Q;
+  font-size: 11Q;
+  line-height: 16Q;
   text-indent: 0em;
-  margin: 4mm 4mm 4mm 8mm;
+  padding: 2mm 2mm 2mm 2mm;
+  margin-top: 2mm;
+  margin-bottom: 2mm;
+  background: #cdf2fd;
 }
 
 h3 {
@@ -126,10 +130,16 @@ h3 {
   line-height: 10mm;
   width: 114mm;
   height: 10mm;
+   /* margin */
   margin-top: 5mm;
   margin-bottom: 3mm;
   margin-right: 0mm;
   margin-left: 0mm;
+  /* padding */
+  padding-top: 0mm;
+  padding-bottom: 0mm;
+  padding-right: 1mm;
+  padding-left: 1mm;
   border: solid 0.5mm #3da8c9;
   color: #3da8c9;
 }
@@ -544,17 +554,18 @@ html { counter-reset: footnote; }
   .footnote {
     float: footnote; /* CSSでページ下部に脚注を置くための設定 */
     font-size: 10Q; /* フォントは小さくしたい */
-    line-height: 14Q;
+    line-height: 12Q;
     counter-increment: footnote;
     text-indent: 0em;
     text-align: justify;
   }
   /* 脚注本体の行頭に[<数字>]を挿入する */
   .footnote::footnote-marker {
-    content: "[" counter(footnote) "]";
-    font-size: 10Q;
+    content: "[" counter(footnote) "] ";
+    font-size: 8Q;
     display: inline;
     vertical-align: super;
+    color: #000000;
   }
   /* 脚注の参照元にリンクを作成する */
   .footnote::footnote-call {
@@ -563,5 +574,6 @@ html { counter-reset: footnote; }
     vertical-align: super;
     display: inline;
     line-height: 1;
+    color: #000000;
   }
 }
