--- a/_css/main.css
+++ b/_css/main.css
@@ -37,7 +37,7 @@ html {
   /* bleed: 3mm; */
   /* トンボ （印刷所指定により今回はナシ） */
   /* marks: cross crop; */
-  /*基本のマージン（左右で変えるときは別に指定）*/
+  /*基本のマージン（左右で変えるときは別に指定）（上 右 下 左）*/
   margin: 15mm 18mm 18mm 16mm;
 
   @bottom-center {
