--- a/01_Importance_of_LLM_and_CNN/_css/main.css
+++ b/01_Importance_of_LLM_and_CNN/_css/main.css
@@ -237,7 +237,7 @@ em {
   font-style: normal;
   text-decoration: underline;
   text-decoration-thickness: 0.4em;
-  text-decoration-color: #bbb;
+  text-decoration-color: #82def5;
   text-underline-offset: -0.1em;
   text-decoration-skip-ink: none;
 }
